Fix margins on mobile

--- a/src/styles/live.scss
+++ b/src/styles/live.scss
@@ -176,6 +176,7 @@
       display: flex;
       flex-flow: column;
       flex-wrap: wrap;
+      margin-top: 0;
       padding-left: 0;
 
       h3 {
